E2E-917: get contact type outcome types (#566)
* E2E-917: get contact type outcome types

* E2E-917 - Get contact type outcome types

* E2E-917 - Fix pull request comments

Co-authored-by: Ed Brindley <ed@maidavale.org>